# EcNode

./: .devcontainer.json  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CRITICAL_FIX_2025_01_12.md  Cargo.toml  DESIGN.md  ELECTION_DEDUPLICATION_FIX.md  GOALS.md  IMPLEMENTATION_SUMMARY.md  LITERATURE.md  Notes.md  OPEN_ISSUES.md  PROFILING.md  README.md  SECURITY.md  SECURITY_ANALYSIS_REPORT.md  VERIFICATION.md  competitive_peer_synchronization.md  competitive_sync_analysis.py  comprehensive_peer_synchronization_analysis.md  ecrust_comparative_analysis_review.md  minefield_accountability_design.md  neighborhood_random_sampling_design.md  network_aware_synchronization.py  network_aware_synchronization_analysis.md  notes.txt  profile_on_mac.sh  random_range_test.py  realistic_peer_synchronization_analysis.md  scratch.txt  signature_based_proof_of_storage.md  signature_based_proof_of_storage_analysis.md  simulation_output.txt  whitepaper.md
.claude/: settings.local.json
Design/: 256bit_migration_guide.md  ARCHITECTURE.md  SCENARIO_ANALYSIS.md  SIMULATION_PLAN.md  argon2_peer_authentication_design.md  clean_architecture_refactoring.md  commit_chain.md  commit_chain_critical_review.md  commit_chain_design.md  enhanced_synchronization_with_block_chains.md  heterogeneous_linear_slope_report.md  minefield_accountability_design.md  nosql_backend_analysis.md  parasitic_query_final_analysis.md  peer_identity_and_argon2_optimization.md  peer_lifecycle_simulator.md  peer_management_system.md  performance_analysis.md  reactive_vote_simulation.py  reactive_vote_topology_sweep.md  response_driven_commit_flow.md  rocksdb_multi_collection_architecture.md  routing_depth_scaling.md  rust_implementation_notes.md  signature-statistic.txt  signature-stats.txt  signature_based_proof_of_storage_analysis.md  signature_proof_of_storage.py  small-world.md  viability_assessment.md  vote_flow_and_batching.md  vote_protocol_description.md  vote_simulation.py  vote_simulation_reference.md  whitepaper.md  winning_set_analysis.py
agent-docs/: README.md  glossary.md  protocol-pillars.md  source-of-truth.md
benches/: argon2_single_hash_bench.rs  argon2_validation_bench.rs
docs/: TODO_election_integration.md  TOKENID_TOKENHASH_REFACTOR.md  aligned_storage_proof_eprint_v3.md  ec_genesis_design.md  ec_protocol_v0.10.md  ec_protocol_v0.12.md  ec_protocol_v0.8.md  identity-block-design.md  peer_election_design.md  peer_lifecycle_implementation_summary.md  safety_properties_and_decision_guide.md  ticket_system_design.md
examples/: basic_simulation.rs  csv_export_test.rs  event_analysis.rs  event_logging_test.rs  fixed_seed_test.rs  genesis_demo.rs  peer_lifecycle_sim.rs
peer_lifecycle/: CONNECTION_ANALYSIS_SUMMARY.md  MAPPING_REQUEST_FIX.md  README.md  SIMULATION_RESULTS.md  analyze_connections.py  comprehensive_simulation.py  stress_test_connections.py  (+7 more)
(+127 files in other folders)
