[package]
name = "echo-consent"
version = "0.1.0"
edition = "2021"

[lib]
name = "ec_rust"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
rand = "0.8.5"
simple_logger = "4.2.0"
hashbrown = "0.13.2"
blake3 = "1.5"