[package]
name = "echo-consent"
version = "0.1.0"
edition = "2021"

[lib]
name = "ec_rust"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Binary for running scenarios from YAML files
[[bin]]
name = "scenario_runner"
path = "simulator/scenario_runner.rs"

# Binary for profiling scenarios
[[bin]]
name = "profiling_runner"
path = "simulator/profiling_runner.rs"

# Examples are in the simulator/ directory
[[example]]
name = "basic_simulation"
path = "simulator/basic_simulation.rs"

[[example]]
name = "peer_lifecycle_sim"
path = "simulator/peer_lifecycle_sim.rs"

[[example]]
name = "csv_export_test"
path = "simulator/csv_export_test.rs"

[[example]]
name = "event_analysis"
path = "simulator/event_analysis.rs"

[[example]]
name = "event_logging_test"
path = "simulator/event_logging_test.rs"

[[example]]
name = "fixed_seed_test"
path = "simulator/fixed_seed_test.rs"

[[example]]
name = "scenario_bootstrap"
path = "simulator/scenario_bootstrap.rs"

[[example]]
name = "scenario_coverage_comparison"
path = "simulator/scenario_coverage_comparison.rs"

[[example]]
name = "scenario_group_comparison"
path = "simulator/scenario_group_comparison.rs"

[dependencies]
log = "0.4.20"
rand = "0.8.5"
simple_logger = "4.2.0"
hashbrown = "0.13.2"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"